layout fix for filter by type

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -57,7 +57,7 @@
                
       %p 
         %strong Location type
-        %select#filter_type
+        %select#filter_type.input-block-level
           %option{:value => ""} -- Select location type --
           %option{:value => "Chicago Housing Authority"} Chicago Housing Authority
           %option{:value => "Chicago Public Library"} Chicago Public Library
