--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,12 +18,33 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
+          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
           %a.brand(href="/") Tech Locator
-          %p.navbar-text Find technology resources in Chicago
+          
+          .container.nav-collapse
+            %ul.nav.pull-right
+              - if admin_signed_in?
+                %li
+                  = link_to('Edit account', edit_admin_registration_path)
+                %li
+                  = link_to('Logout', destroy_admin_session_path, :method => :delete)        
+              - else
+                %li
+                  = link_to('Sign up', new_admin_registration_path)
+                %li
+                  = link_to('Login', new_admin_session_path)
+
 
     .container
 
       .content
+        - flash.each do |name, msg|
+          %div{:class => "alert alert-#{name == :notice ? "success" : "error"}"}
+            %a.close{"data-dismiss" => "alert"} &#215;
+            = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
         = yield
     
       %footer
