--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -21,7 +21,7 @@
 }
 
 .item-list a {
-  background: url(/images/arrow.gif) no-repeat 96% 50%;
+  background: url(/assets/arrow.gif) no-repeat 96% 50%;
   border-bottom: 1px solid #d9d9d9;
   color: #000;
   display: block;
