--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     = stylesheet_link_tag "application", :media => "all"
     = content_for :stylesheets
     
-    %link(href="images/favicon.ico" rel="shortcut icon")
+    /%link(href="images/favicon.ico" rel="shortcut icon")
 
   %body
     .navbar.navbar-fixed-top
@@ -28,12 +28,10 @@
             %ul.nav.pull-right
               - if admin_signed_in?
                 %li
-                  = link_to('Edit account', edit_admin_registration_path)
+                  = link_to('Edit your account', edit_admin_registration_path)
                 %li
                   = link_to('Logout', destroy_admin_session_path, :method => :delete)        
               - else
-                %li
-                  = link_to('Sign up', new_admin_registration_path)
                 %li
                   = link_to('Admin login', new_admin_session_path)
 
