--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -59,7 +59,7 @@
       %label 
         %strong and are …
         %select#filter_type.input-block-level
-          %option{:value => ""} -- Select location type --
+          %option{:value => ""} Any location type
           %option{:value => "Chicago Housing Authority"} Chicago Housing Authority
           %option{:value => "Chicago Public Library"} Chicago Public Library
           %option{:value => "Chicago Public School"} Chicago Public School
