--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,5 +6,5 @@
     = f.input :password, hint:"Enter password"
     = f.input :password_confirmation, hint:"Confirm password"
   = f.buttons do
-    = f.commit_button :button_html => {:class => "primary"}
+    = f.commit_button :button_html => {:class => "primary", :value => "Sign up!"}
 = render :partial => "devise/shared/links"
