fix for tech training filter

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -47,7 +47,7 @@
                 Internet access
           %li
             %label.checkbox.inline
-              %input#filter_technology{:type => "checkbox"}
+              %input#filter_training{:type => "checkbox"}
               %span{:rel => "popover", :"data-content" => "Locations that offer training and courses on using computers.", :"data-original-title" => "<h4>Technology training</h4>"}
                 Technology training
           %li
