set up gallery modal on location page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -75,10 +75,10 @@
       
     %p#resultCount.alert.alert-info.lead
 
-  .span9.hidden-phone.hidden-tablet
+  .span9.hidden-phone
     #mapCanvas
     
-  .span9.hidden-desktop
+  .span9.hidden-desktop.hidden-tablet
     .row
       .span12
         %ul.item-list#resultsList
