hiding admin nav until fully implemented

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,19 +24,19 @@
             %span.icon-bar
           %a.brand(href="/") Tech Locator
           
-          .container.nav-collapse
-            %ul.nav.pull-right
-              - if admin_signed_in?
-                - if current_admin.try(:superadmin?)
-                  %li
-                    = link_to('Manage admins', admin_index_path)
-                %li
-                  = link_to('Edit your account', edit_admin_registration_path)
-                %li
-                  = link_to('Logout', destroy_admin_session_path, :method => :delete)        
-              - else
-                %li
-                  = link_to('Admin login', new_admin_session_path)
+          / .container.nav-collapse
+          /   %ul.nav.pull-right
+          /     - if admin_signed_in?
+          /       - if current_admin.try(:superadmin?)
+          /         %li
+          /           = link_to('Manage admins', admin_index_path)
+          /       %li
+          /         = link_to('Edit your account', edit_admin_registration_path)
+          /       %li
+          /         = link_to('Logout', destroy_admin_session_path, :method => :delete)        
+          /     - else
+          /       %li
+          /         = link_to('Admin login', new_admin_session_path)
 
 
     .container
