--- a/app/views/location/show.html.haml
+++ b/app/views/location/show.html.haml
@@ -186,10 +186,9 @@
           %dd 
             = @location[:handicapaccessdetail]
 
-/ modal-gallery for the image gallery
 #modal-gallery.modal.modal-gallery.hide.fade
   .modal-header
-    %a.close{"data-dismiss" => "modal"} ×
+    %a.close{"data-dismiss" => "modal"} x
     %h3.modal-title
   .modal-body
     .modal-image
