--- a/app/views/location/show.html.haml
+++ b/app/views/location/show.html.haml
@@ -1,4 +1,5 @@
 - title @location[:organizationname] + " - Tech Locator"
+- page_layout "container"
 - content_for :javascripts do
   = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" 
   = javascript_include_tag :location
@@ -134,7 +135,7 @@
         %ul.thumbnails#gallery{:"data-toggle" => "modal-gallery", :"data-target" => "#modal-gallery"}
           - getFlickrGalleryPhotos(@location[:flickr_tag]).each do |photo|
             %li.span1
-              %a.thumbnail{:href => "http://farm#{photo.farm}.static.flickr.com/#{photo.server}/#{photo.id}_#{photo.secret}.jpg", :rel =>"gallery", :title => "#{photo.title}"}
+              %a.thumbnail{:href => getFlickrPhotoPath(photo), :rel =>"gallery", :title => "#{photo.title}"}
                 %img{:src => "http://farm#{photo.farm}.static.flickr.com/#{photo.server}/#{photo.id}_#{photo.secret}_s.jpg"} 
 
         %p
@@ -147,12 +148,9 @@
   .span5
     .well
       %p
-        - featured_photo = getFlickrFeaturedPhoto("#{@location[:flickr_tag]}-featured")
+        - featured_photo = getFlickrFeaturedPhoto(@location[:flickr_tag])
         - unless featured_photo.nil?
-          %img.img-polaroid{:src => "http://farm#{photo.farm}.static.flickr.com/#{photo.server}/#{photo.id}_#{photo.secret}.jpg", :title => "Placeholder external image"}
-        - else
-          - puts "no featured photo found"
-          %img.img-polaroid{:src => "/assets/pcc-ex-132.jpg", :title => "Placeholder external image"}
+          %img.img-polaroid{:src => getFlickrPhotoPath(featured_photo), :title => "Placeholder external image"}
 
       #mapDetail
       %hr
