--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,8 +1,4 @@
 @import "twitter/bootstrap/bootstrap";
-body { 
-	padding-top: 60px;
-}
-
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
@@ -30,3 +26,12 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+
+@navbarHeight: 30px;
+@navbarBackground: #005183;
+@navbarBackgroundHighlight: #0069AA;
+
+@navbarLinkColor: #ffffff;
+@navbarLinkColorHover: #ffffff;
+@linkColor: #0069AA;
