--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "Tech Locator"
+    %title= content_for?(:title) ? yield(:title) : "Locations - Connect Chicago"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -15,43 +15,45 @@
     /%link(href="images/favicon.ico" rel="shortcut icon")
 
   %body
-    .navbar.navbar-fixed-top
+    %a{:href => "/"}
+      %img.logo{:src => "/assets/logo.png", :alt => "Connect Chicago", :title => "Connect Chicago"}
+    .navbar
       .navbar-inner
         .container
-          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.brand(href="/") Tech Locator
-          
-          / .container.nav-collapse
-          /   %ul.nav.pull-right
-          /     - if admin_signed_in?
-          /       - if current_admin.try(:superadmin?)
-          /         %li
-          /           = link_to('Manage admins', admin_index_path)
+          %ul.nav
+            %li
+              %a{:href => APP_CONFIG['domain']} Home
+            %li.active
+              %a{:href => "/"} Locations
+            %li
+              %a{:href => APP_CONFIG['domain'] + "learn"} Learn
+            %li
+              %a{:href => APP_CONFIG['domain'] + "news_and_events"} News &amp; Events
+            %li
+              %a{:href => APP_CONFIG['domain'] + "volunteer"} Volunteer
+            %li
+              %a{:href => APP_CONFIG['domain'] + "about"} About
+
+          / %ul.nav.pull-right
+          /   - if admin_signed_in?
+          /     - if current_admin.try(:superadmin?)
           /       %li
-          /         = link_to('Edit your account', edit_admin_registration_path)
-          /       %li
-          /         = link_to('Logout', destroy_admin_session_path, :method => :delete)        
-          /     - else
-          /       %li
-          /         = link_to('Admin login', new_admin_session_path)
+          /         = link_to('Manage admins', admin_index_path)
+          /     %li
+          /       = link_to('Edit your account', edit_admin_registration_path)
+          /     %li
+          /       = link_to('Logout', destroy_admin_session_path, :method => :delete)        
+          /   - else
+          /     %li
+          /       = link_to('Admin login', new_admin_session_path)
 
     %div{:class => content_for?(:page_layout) ? content_for(:page_layout) : "container"}
-
       .content
         - flash.each do |name, msg|
           %div#flash{:class => "alert alert-#{name == :notice ? "success" : "error"}"}
             %a.close{"data-dismiss" => "alert"} &#215;
             = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
         = yield
-    
-      %footer
-        %p.pull-right
-          Website by 
-          %a{:href => "http://derekeder.com", :title => "Derek Eder"} Derek Eder
-          2012
     /
       Javascripts
       \==================================================
