updated colors, removed placeholder images, stripping http from website snippet

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,6 +27,13 @@
 // Example:
 // @linkColor: #ff0000;
 
+@blue: #0069AA;
+@green: #2CAD71;
+@red: #DC453A;
+@yellow: #C3B639;
+@orange: #C3B639;
+@pink: #DC453A;
+@purple: #DC453A;
 
 @navbarHeight: 30px;
 @navbarBackground: #005183;
