--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     /%link(href="images/favicon.ico" rel="shortcut icon")
 
   %body
-    %a{:href => "/"}
+    %a{:href => APP_CONFIG['domain']}
       %img.logo{:src => "/assets/logo.png", :alt => "Connect Chicago", :title => "Connect Chicago"}
     .navbar
       .navbar-inner
