--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
             %li
               %a{:href => APP_CONFIG['domain'] + "learn"} Learn
             %li
-              %a{:href => APP_CONFIG['domain'] + "news_and_events"} News &amp; Events
+              %a{:href => APP_CONFIG['domain'] + "news-events"} News &amp; Events
             %li
               %a{:href => APP_CONFIG['domain'] + "volunteer"} Volunteer
             %li
