--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,7 +60,7 @@
       Javascripts
       \==================================================
     / Placed at the end of the document so the pages load faster
-
+    = javascript_include_tag "application"
     = content_for :javascripts
     
     = javascript_include_tag "analytics_lib" if Rails.env.production?
