--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,10 +7,10 @@
   = javascript_include_tag "home"
 
 .row-fluid
-  .span3
+  .span4
     .well
       %h4
-        Find address 
+        Find near an address 
         <small>(<a id='findMe' href='#'>find me</a>)</small>
       %input.input-block-level#search_address{:placeholder => "Enter an address ...", :type => "text"}
       
@@ -24,26 +24,28 @@
       
       %input#btnSearch.btn.btn-primary{:type => "button", :value => "Search"}
       %button#reset.btn Reset
+
+      .pull-right
+        %button#view_mode.btn.btn-info{:'data-mode' => 'map'} Show list
       
     .well      
-      %label 
-        %strong Show me locations that have …
-        %ul.inputs-list.unstyled
-          %li
-            %label.checkbox.inline
-              %input#filter_internet{:type => "checkbox"}
-              %span{:rel => "popover", :"data-content" => "Locations that offer computers with access to the internet.", :"data-original-title" => "<h4>Internet access</h4>"}
-                Internet access
-          %li
-            %label.checkbox.inline
-              %input#filter_training{:type => "checkbox"}
-              %span{:rel => "popover", :"data-content" => "Locations that offer training and courses on using computers.", :"data-original-title" => "<h4>Technology training</h4>"}
-                Technology training
-          %li
-            %label.checkbox.inline
-              %input#filter_wifi{:type => "checkbox"}
-              %span{:rel => "popover", :"data-content" => "Locations that offer free wireless internet access.", :"data-original-title" => "<h4>Wifi</h4>"}
-                Wi-Fi
+      %h4 Show me locations that have …
+      %ul.inputs-list.unstyled
+        %li
+          %label.checkbox.inline
+            %input#filter_internet{:type => "checkbox"}
+            %span{:rel => "popover", :"data-content" => "Locations that offer computers with access to the internet.", :"data-original-title" => "<h4>Internet access</h4>"}
+              Internet access
+        %li
+          %label.checkbox.inline
+            %input#filter_training{:type => "checkbox"}
+            %span{:rel => "popover", :"data-content" => "Locations that offer training and courses on using computers.", :"data-original-title" => "<h4>Technology training</h4>"}
+              Technology training
+        %li
+          %label.checkbox.inline
+            %input#filter_wifi{:type => "checkbox"}
+            %span{:rel => "popover", :"data-content" => "Locations that offer free wireless internet access.", :"data-original-title" => "<h4>Wifi</h4>"}
+              Wi-Fi
                
       %label 
         %strong and are …
@@ -63,10 +65,8 @@
       
     %p#resultCount.alert.alert-info.lead
 
-  .span9.hidden-phone
-    #mapCanvas
+  .span8
+    #listCanvas{:style => "display: none;"}
+      %ul#resultsList.item-list
     
-  .span9.hidden-desktop.hidden-tablet
-    .row
-      .span12
-        %ul.item-list#resultsList
+    #mapCanvas
