set view mode and store state in url

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,11 +22,11 @@
           %option{:value => "3220"} 2 miles
         search radius
       
+      .pull-right
+        %button#view_mode.btn.btn-info Show list
+
       %input#btnSearch.btn.btn-primary{:type => "button", :value => "Search"}
       %button#reset.btn Reset
-
-      .pull-right
-        %button#view_mode.btn.btn-info{:'data-mode' => 'map'} Show list
       
     .well      
       %h4 Show me locations that have …
