--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -67,6 +67,6 @@
 
   .span8
     #listCanvas{:style => "display: none;"}
-      %ul#resultsList.item-list
+      #resultsList
     
     #mapCanvas
